--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,5 +2,9 @@
 
 $light-grey: #ccc;
 $dark-grey: #222;
+$blue: #04b4bb;
+$orange: #f27c43;
+$light-blue: #d0e9e5;
+$white: #fff;
 
 $text-color: $dark-grey;
