--- a/css/style.css
+++ b/css/style.css
@@ -148,12 +148,13 @@ span {
     padding-right: 5em;
   }
   .navigation ul {
-    padding: 0;
+    padding-right: 1em;
+    float: right;
   }
   .navigation li {
-    float: right;
     list-style-type: none;
     background-color: inherit;
+    display: inline-block;
   }
   .navigation li:first-child a {
     border-top: none;
