--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 // Import mixins, variables, and other modules, usually compass related
 @import "base";
 @import "mixins";
+@import "grid";
 
 // Component rules
 @import "components/main";
