--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -31,3 +31,17 @@
   width: auto;
   overflow: auto;
 }
+
+@mixin btn($color){
+  color: $color;
+  text-decoration: none;
+  height: 40px;
+  width: 40px;
+  &:before {
+    height: 40px;
+    width: 40px;
+    display: inline-block;
+    padding: 13px 11px;
+    border: 1px solid $light-grey;
+  }
+}
