--- a/css/style.css
+++ b/css/style.css
@@ -1081,7 +1081,7 @@ header {
 .logo {
   width: 45%;
   display: inline-block;
-  padding: 1em 0 0 .25em;
+  padding: 1em 0 0 .50em;
 }
 
 .toggle-btn {
@@ -1125,7 +1125,7 @@ header {
   width: 40px;
   display: inline-block;
   padding: 13px 11px;
-  border: 1px solid #fff;
+  border: 1px solid #ccc;
 }
 
 .close-btn {
