--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -46,6 +46,14 @@ header {
   width:45%;
   display: inline-block;
   padding: 1em 0 0 .50em;
+  @media only screen and (max-width: 60em) {
+    width:50%;
+    display: inline-block;
+  }
+  @media only screen and (max-width: 38em) {
+    width:30%;
+    display: inline-block;
+  }
 }
 
 .toggle-btn {
@@ -136,15 +144,6 @@ span {
 @media only screen and (min-width: 60em) {
   .toggle-btn, .close-btn {
     display: none;
-  }
-  /*.navigation {
-    li {
-      dfloat: right;
-    }
-  }*/
-  .logo {
-    width:50%;
-   display: inline-block;
   }
 
   .navigation {
