--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -37,11 +37,11 @@
   text-decoration: none;
   height: 40px;
   width: 40px;
+  padding-top: .5em;
   &:before {
     height: 40px;
     width: 40px;
     display: inline-block;
     padding: 13px 11px;
-
   }
 }
