feat(img/scss): add cloud img to the background of the nav

--- a/css/style.css
+++ b/css/style.css
@@ -1076,6 +1076,8 @@ header {
 
 .header {
   background-color: #04b4bb;
+  background-image: url(../img/clouds.jpg);
+  background-size: cover;
 }
 
 .logo {
