--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -40,6 +40,8 @@ header {
 
 .header {
   background-color: $blue;
+  background-image: url(../img/clouds.jpg);
+  background-size: cover;
 }
 
 .logo {
