--- a/css/style.css
+++ b/css/style.css
@@ -1069,6 +1069,39 @@ header {
   position: relative;
 }
 
+.billboard {
+  background-image: url(../img/pnn-billboard.jpg);
+  background-size: cover;
+  height: 233px;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+}
+
+@media only screen and (min-width: 25em) {
+  .billboard {
+    height: 360px;
+  }
+}
+
+@media only screen and (min-width: 38em) {
+  .billboard {
+    height: 560px;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  .billboard {
+    height: 650px;
+  }
+}
+
+@media only screen and (min-width: 90em) {
+  .billboard {
+    height: 850px;
+  }
+}
+
 .img-flex {
   display: block;
   width: 100%;
